# BC_irb4600

./: README.md  frames.gv  text.txt
src/abb_camera_sim/: .setup_assistant  CMakeLists.txt  package.xml
src/abb_camera_sim/config/: abb_irb4600_60_205.srdf  cotrollers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/abb_camera_sim/launch/: chomp_planning_pipeline.launch.xml  (+17 more)
src/abb_camera_simulation/: CMakeLists.txt  package.xml
src/abb_camera_simulation/config/: abb_irb_4600.yaml  abb_irb_control.yaml
src/abb_camera_simulation/launch/: abb_control.launch  abb_gazebo.launch  camera_sim.launch  chessboard.launch  demo.launch  load_irb4600.launch  scan_object.launch  test_irb4600.launch  trajectory_controller.launch
src/abb_camera_simulation/meshes/abb_irb/: model.config  model.sdf
src/abb_camera_simulation/meshes/abb_irb4600_60_205/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/abb_camera_simulation/meshes/abb_irb4600_60_205/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/abb_camera_simulation/meshes/kinect/collision/: kinect_sensor.stl
src/abb_camera_simulation/models/: checkerboard_horizontal.urdf
src/abb_camera_simulation/urdf/: abb_irb4600_60_205.gazebo  abb_irb4600_60_205.urdf  abb_irb4600_60_205.xacro  abb_irb4600_60_205_macro.xacro  scan_object.urdf
src/cpp_volumetric_nbv/: CMakeLists.txt  package.xml
src/volumetric_nbv/: CMakeLists.txt  package.xml
(+13 files in other folders)
